2008-03-17  Werner Koch  <wk@g10code.com>

	* cert.c (ksba_cert_get_image): Fix size_t/int format mismatch.
	Reported by Stéphane Corthésy.

2008-02-25  Werner Koch  <wk@g10code.com>

	* visibility.h, visibility.c: New.
	* util.h: Include visibility.h.

	* keyinfo.c (pk_algo_table, sig_algo_table, enc_algo_table): Make
	const.
	(cryptval_to_sexp): Adjust for it.
	* dn.c (oid_name_tbl): Make const and static.
	* cms.c: Make oidstr_ const.

	* asn1-gentables.c (create_static_structure): Revamp to use a
	string table to reduce the relocation table.
	* asn1-func.h: Replace char* by offsets.
	* asn1-func2.c (ksba_asn_create_tree): Adjust for that change.

2008-02-22  Werner Koch  <wk@g10code.com>

	* keyinfo.c (pkalgo_t): New.
	(algo_table_s): Add fields PARMELEM_STRING and
	PARMCTRL_STRING. repalce IS-ECC by PKALGO. Adjust all tables and
	users of IS_ECC.  Add DSA parameter description.
	(TLV_LENGTH): Add PREFIX arg and change all callers.
	(_ksba_keyinfo_to_sexp): Parse parameters.
	(oid_from_buffer): Replace R_IS_ECC by R_PKALGO and allow for DSA.
	(_ksba_keyinfo_from_sexp): Revamp to support DSA.
	(sig_algo_table): Add dsaWithRIPEMD160, dsaWithSha224 and
	dsaWithSha256.

2008-02-21  Werner Koch  <wk@g10code.com>

	* der-encoder.c (_ksba_der_write_algorithm_identifier): Add hack
	to allow not writing the parameter.
	* cms.c (store_smime_capability_sequence): Use this hack.

2008-02-01  Werner Koch  <wk@g10code.com>

	* cert.c (get_name): Fix for unknown tags.

2008-01-11  Werner Koch  <wk@g10code.com>

	* ber-decoder.c (decoder_next): Initialize NODE.  Fixes bug#582.

2007-12-13  Werner Koch  <wk@g10code.com>

	* keyinfo.c (algo_table_s): Replace the unused DIGEST_ALGO int by
	a string and changed all tables to use a string representation of
	the digest algo.
	(cryptval_to_sexp): Insert the hash algo element into the result. 

2007-11-14  Werner Koch  <wk@g10code.com>

	* ber-decoder.c (_ksba_ber_decoder_dump) 